--- a/reg.html
+++ b/reg.html
@@ -49,6 +49,7 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            margin: 10px 0;
         }
 
         button:hover {
@@ -71,6 +72,8 @@
         <input type="text" name="" id="u_pass" placeholder="Enter password">
         <input type="text" name="" id="conf_pass" placeholder="Conform password">
         <button onclick="handlereg()">register</button>
+        <button onclick="handlelogin()">Login</button>
+
     </div>
     <script>
 
@@ -132,7 +135,10 @@
                 }
             }
         }
+        function handlelogin() {
+            window.open("http://127.0.0.1:5500/day21june/login.html", "_self")
 
+        }
     </script>
 </body>
 
